<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.coway</groupId>
	<artifactId>etrust</artifactId>
	<packaging>war</packaging>
	<version>1.0.0</version>
	<name>etrust</name>
	<url>http://www.coway.com</url> 

	<properties>
		<java-version>1.8</java-version>
		<spring.maven.artifact.version>4.1.2.RELEASE</spring.maven.artifact.version>
		<egovframework.rte.version>3.6.0</egovframework.rte.version>
		<org.springframework.security.version>4.0.2.RELEASE</org.springframework.security.version>
		<hikaricp.version>2.6.1</hikaricp.version>
		<jackson.library>2.7.5</jackson.library>
		<swagger.version>2.2.2</swagger.version>
		<webinf-lib>${project.basedir}/src/main/webapp/WEB-INF/lib</webinf-lib>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<repositories> 
		<repository>
			<id>mvn</id>
			<url>https://mvnrepository.com/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>mvn2</id>
			<url>http://repo1.maven.org/maven2/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>central</id>
			<url>http://central.maven.org/maven2/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>egovframe</id>
			<url>http://www.egovframe.go.kr/maven/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>egovframe2</id>
			<url>http://maven.egovframe.kr:8080/maven/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

		<!-- ojdbc7 -->
		<repository>
			<id>codelds</id>
			<url>https://code.lds.org/nexus/content/groups/main-repo</url>
		</repository>

	</repositories>

	<dependencies>

		<!-- TODO : weblogic jndi 연결 테스트용. 차후 연결확인 되면 삭제할 것 . 운영시 불필요한 jar. -->
		<dependency>
			<groupId>weblogic</groupId>
			<artifactId>wlclient</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/wlclient.jar</systemPath>
		</dependency>

		<!-- crystal report -->
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>com.azalea.ufl.barcode.1.0</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/com.azalea.ufl.barcode.1.0.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>crystal</groupId>
			<artifactId>barcode</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/barcode.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>crystal</groupId>
			<artifactId>commons-collections-3.1</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/commons-collections-3.1.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>crystal</groupId>
			<artifactId>commons-configuration-1.2</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/commons-configuration-1.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>commons-lang-2.1</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/commons-lang-2.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/commons-logging.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>CrystalCommon2</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/CrystalCommon2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>CrystalReportsRuntime</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/CrystalReportsRuntime.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>cvom</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/cvom.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>DatabaseConnectors</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/DatabaseConnectors.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>icu4j</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/icu4j.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>jai_imageio</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/jai_imageio.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>JDBInterface</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/JDBInterface.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>jrcerom</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/jrcerom.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>keycodeDecoder</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/keycodeDecoder.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>crystal</groupId>
			<artifactId>logging</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/logging.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>pfjgraphics</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/pfjgraphics.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>QueryBuilder</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/QueryBuilder.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>webreporting</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/webreporting.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>webreporting-jsf</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/webreporting-jsf.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>xpp3</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/xpp3.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>crystal</groupId>
			<artifactId>Xtreme</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${webinf-lib}/Xtreme.jar</systemPath>
		</dependency>

		<!-- crystal report -->

		<!-- 표준프레임워크 실행환경 -->
		<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.ptl.mvc</artifactId>
			<version>${egovframework.rte.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.psl.dataaccess</artifactId>
			<version>${egovframework.rte.version}</version>
		</dependency>
		<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.fdl.property</artifactId>
			<version>${egovframework.rte.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<scope>provided</scope>
			<version>2.5</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>taglibs</groupId>
			<artifactId>standard</artifactId>
			<version>1.1.2</version>
		</dependency>

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr</artifactId>
			<version>3.5</version>
		</dependency>

		<!-- datasource -->
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>${hikaricp.version}</version>
		</dependency>

		<!-- jdbc -->
		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>ojdbc7</artifactId>
			<version>12.1.0.2</version>
		</dependency>

		<!-- json -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.library}</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.0</version>
		</dependency>

		<!-- swagger -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${swagger.version}</version>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${swagger.version}</version>
		</dependency>

		<!-- tiles -->
		<dependency>
			<groupId>org.apache.tiles</groupId>
			<artifactId>tiles-jsp</artifactId>
			<version>3.0.5</version>
		</dependency>

		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>22.0</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

		<!-- AUIGrid 에서 사용. -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.9</version>
		</dependency>

		<!-- AUIGrid JSON start <dependency> <groupId>org.codehaus.jackson</groupId> 
			<artifactId>jackson-core-asl</artifactId> <version>1.9.13</version> </dependency> 
			<dependency> <groupId>org.codehaus.jackson</groupId> <artifactId>jackson-mapper-asl</artifactId> 
			<version>1.9.13</version> </dependency> AUIGrid JSON end -->

		<!-- MIME -->
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-parsers</artifactId>
			<version>1.13</version>
		</dependency>

		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-core</artifactId>
			<version>1.13</version>
		</dependency>

		<!-- mail -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.5</version>
		</dependency>

		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>1.7</version>
		</dependency>

		<!-- httpclient -->
		<dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.2</version>
        </dependency>

		<!-- ehcache -->
        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <artifactId>ehcache</artifactId>
            <version>2.10.3</version>
        </dependency>

		<!-- excel -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.16</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.16</version>
		</dependency>

		<!-- csv -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.5</version>
		</dependency>


		<!-- soap -->
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.axis</groupId>
			<artifactId>axis</artifactId>
			<version>1.4</version>
		</dependency>

		<dependency>
			<groupId>javax.xml</groupId>
			<artifactId>jaxrpc-api</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>commons-discovery</groupId>
			<artifactId>commons-discovery</artifactId>
			<version>0.5</version>
		</dependency>

		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<version>1.6.2</version>
		</dependency>

		<!-- soap -->

	</dependencies>

	<build>
		<defaultGoal>install</defaultGoal>
		<directory>${basedir}/target</directory>
		<finalName>${artifactId}-${version}</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.2</version>
					<configuration>
						<port>80</port>
						<path>/</path>
						<systemProperties>
							<JAVA_OPTS>-Xms256m -Xmx768m -XX:MaxPermSize=256m</JAVA_OPTS>
						</systemProperties>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<!-- EMMA -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>emma-maven-plugin</artifactId>
					<version>1.0-alpha-3</version>
				</plugin>
				<!-- PMD manven plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.8</version>
					<configuration>
						<rulesets>
							<ruleset>${project.basedir}/src/main/resources/pmd/EgovInspectionRules_kor-3.5.xml</ruleset>
						</rulesets>
						<sourceEncoding>UTF-8</sourceEncoding>
						<includeTests>false</includeTests>
						<excludes>
							<exclude>**/com/coway/trust/config/ctos/**/*.java</exclude> <!-- gernerate from soap xml -->
							<exclude>**/com/coway/trust/**/sample/**/*.java</exclude>
						</excludes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<!-- EMMA -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>true</skipTests>
					<forkMode>once</forkMode>
					<reportFormat>xml</reportFormat>
					<excludes>
						<exclude>**/Abstract*.java</exclude>
						<exclude>**/*Suite.java</exclude>
					</excludes>
					<includes>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
